tela de novo pedido de locação criado

--- a/pages/veiculos-disponiveis-pag2.html
+++ b/pages/veiculos-disponiveis-pag2.html
@@ -101,7 +101,7 @@
                             </div>
                             <div class="card-action">
                                 <p>Diária: R$95,00</p>
-                                <a href="#">Alugar</a>
+                                <a href="nova-locacao.html">Alugar</a>
                             </div>
                         </div>
                     </div>
@@ -117,7 +117,7 @@
                             </div>
                             <div class="card-action">
                                 <p>Diária: R$95,00</p>
-                                <a href="#">Alugar</a>
+                                <a href="nova-locacao.html">Alugar</a>
                             </div>
                         </div>
                     </div>
@@ -135,7 +135,7 @@
                             </div>
                             <div class="card-action">
                                 <p>Diária: R$95,00</p>
-                                <a href="#">Alugar</a>
+                                <a href="nova-locacao.html">Alugar</a>
                             </div>
                         </div>
                     </div>
@@ -151,7 +151,7 @@
                             </div>
                             <div class="card-action">
                                 <p>Diária: R$95,00</p>
-                                <a href="#">Alugar</a>
+                                <a href="nova-locacao.html">Alugar</a>
                             </div>
                         </div>
                     </div>
