--- a/pages/veiculos-disponiveis.html
+++ b/pages/veiculos-disponiveis.html
@@ -102,7 +102,7 @@
                             </div>
                             <div class="card-action">
                                 <p>Diária: R$95,00</p>
-                                <a href="#">Alugar</a>
+                                <a href="nova-locacao.html">Alugar</a>
                             </div>
                         </div>
                     </div>
@@ -118,7 +118,7 @@
                             </div>
                             <div class="card-action">
                                 <p>Diária: R$95,00</p>
-                                <a href="#">Alugar</a>
+                                <a href="nova-locacao.html">Alugar</a>
                             </div>
                         </div>
                     </div>
@@ -136,7 +136,7 @@
                             </div>
                             <div class="card-action">
                                 <p>Diária: R$95,00</p>
-                                <a href="#">Alugar</a>
+                                <a href="nova-locacao.html">Alugar</a>
                             </div>
                         </div>
                     </div>
@@ -152,7 +152,7 @@
                             </div>
                             <div class="card-action">
                                 <p>Diária: R$95,00</p>
-                                <a href="#">Alugar</a>
+                                <a href="nova-locacao.html" class="modal-trigger">Alugar</a>
                             </div>
                         </div>
                     </div>
