--- a/pages/nova-locacao.html
+++ b/pages/nova-locacao.html
@@ -9,7 +9,7 @@
     <link type="text/css" rel="stylesheet" href="../assets/libraries/materialize-v1.0.0/css/materialize.min.css">
     <link type="text/css" rel="stylesheet" href="../assets/resources/styles/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <title>Devolução de Veículo</title>
+    <title>Novo Pedido de Locação</title>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
         <nav class="cor-principal">
             <div class="container">
                 <div class="nav-wrapper">
-                    <a href="#" class="brand-logo">
+                    <a href="#!" class="brand-logo">
                         <i class="material-icons left">directions_car</i>RentACar
                     </a>
                     <a href="#" data-target="barra-mobile" class="sidenav-trigger">
@@ -30,7 +30,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="../index.html" class="modal-trigger">
+                            <a href="../index.html">
                                 <i class="material-icons left">power_settings_new</i>Encerar Sessão
                             </a>
                         </li>
@@ -43,7 +43,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="../index.html" class="modal-trigger">
+                            <a href="index.html" class="modal-trigger">
                                 <i class="material-icons left">power_settings_new</i>Encerar Sessão
                             </a>
                         </li>
@@ -56,45 +56,57 @@
     <main>
         <section>
             <div class="container">
-                <h1>Devolução de Veículo</h1>
-                <form action="">
+                <h1>Novo pedido de Locação</h1>
+                <form id="form-nova-locacao" action="">
                     <div class="row">
-                        <div class="input-field col s12 m8">
-                            <i class="material-icons prefix">assignment</i>
-                            <input id="input-chassi" type="text" value="125.852.730-98" placeholder="1024">
+                        <div class="input-field col s12 m7">
+                            <i class="material-icons prefix">person</i>
+                            <input id="input-cpf" class="cpf" type="text" class="cep" value="213.123.321-89" placeholder="000.000.000-00">
                             <label for="icon_prefix">CPF</label>
                         </div>
-                        <div class="col s12 m4">
+                        <div class="col s12 m5">
                             <button class="waves-effect waves-light btn button-pesquisar" type="submit">
-                             <i class="material-icons left">search</i>Pesquisar</button>
+                            <i class="material-icons left">search</i>Pesquisar</button>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col s12 m5 div-dados-cliente">
-                            <h4>Dados do cliente</h4>
+                        <div class="col s12 div-dados-cliente">
+                            <h4>Dados do Cliente</h4>
                             <p><span>Nome:</span> Fernanda Cresol</p>
-                            <p><span>CPF:</span> 125.852.730-98</p>
-                        </div>
-                        <div class="col s12 m5 div-dados-locacao">
-                            <h4>Dados da Locação</h4>
-                            <p><span>Veículo:</span>Fiat Argo</p>
-                            <p><span>Número do Chassi:</span>2275ca7689jj2019</p>
-                            <p><span>Data da Locação:</span> 25/08/2019</p>
-                            <p><span>Data para Devolução:</span> 30/08/2019</p>
-                            <p><span>Data Atual:</span> 30/08/2019</p>
-                            <p><span>Multa por atraso:</span> R$0.00</p>
-                            <p><span>TOTAL:</span> R$250.00</p>
+                            <p><span>CPF:</span> 213.123.321-89</p>
+                            <p><span>Telefone:</span> (42)99999-9999</p>
+                            <p><span>CEP:</span> 85000-000</p>
+                            <p><span>Número:</span> 720</p>
                         </div>
                     </div>
                     <div class="row">
-                        <button class="waves-effect waves-light btn right button-confirmar" type="submit">
-                            <i class="material-icons left">check</i>confirmar Devolução</button>
+                        <div class="input-field col s12 div-dados-locacao">
+                            <h4>Dados da Locação</h4>
+                            <p><span>Veículo:</span> Fiat Argo</p>
+                            <p><span>Número do Chassi:</span> 2275ca7689jj2019</p>
+                            <p><span>Preço da Diária:</span> R$95,00</p>
+                            <p><span>Data Atual:</span> 25/08/2019</p>
+                            <p><span>Selecione Abaixo uma data para devolução:</span></p>
+                            <div class="input-field col s12">
+                                <input type="text" class="datepicker" placeholder="Clique aqui para selecionar uma data">
+                                <label for="icon_prefix">Data Devolução</label>
+                            </div>
+                            <p><span>TOTAL:</span>R$185,00</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col s12 m12 l6">
+                            <button class="waves-effect waves-light btn button-confirmar" type="submit">
+                                    <i class="material-icons left">check_circle</i>Confirmar Locação</button>
+                        </div>
+                        <div class="col s12 m12 l6">
+                            <button class="waves-effect waves-light btn button-cancelar" type="submit">
+                                    <i class="material-icons left">cancel</i>Cancelar</button>
+                        </div>
                     </div>
                 </form>
             </div>
         </section>
-
-
     </main>
 
     <div id="modal-menu-servicos" class="modal">
