--- a/pages/nova-locacao.html
+++ b/pages/nova-locacao.html
@@ -88,6 +88,7 @@
                             <p><span>Data Atual:</span> 25/08/2019</p>
                             <p><span>Selecione Abaixo uma data para devolução:</span></p>
                             <div class="input-field col s12">
+                                <i class="material-icons prefix">date_range</i>
                                 <input type="text" class="datepicker" placeholder="Clique aqui para selecionar uma data">
                                 <label for="icon_prefix">Data Devolução</label>
                             </div>
@@ -138,7 +139,7 @@
                     </a>
                 </div>
                 <div class="col s6 m2">
-                    <a href="#modal-gerenciar-relatorio" class="modal-trigger">
+                    <a href="relatorios.html" class="modal-trigger">
                         <img src="../assets/resources/img/menu/relatorio.png">
                         <p>Relátorios</p>
                     </a>
@@ -245,36 +246,6 @@
                     <a href="retornar-veiculo-oficina.html">
                         <img src="../assets/resources/img/menu/retornar-oficina.png">
                         <p>Retornar Veículo da Oficina</p>
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div class="modal-footer">
-            <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Fechar</a>
-        </div>
-    </div>
-
-
-    <div id="modal-gerenciar-relatorio" class="modal">
-        <div class="modal-content">
-            <h4>Gerenciar Clientes</h4>
-            <div class="row ">
-                <div class="col s6 m2">
-                    <a href=" ">
-                        <img src="../assets/resources/img/menu/relatorio-lucros.png">
-                        <p>Relatório de Lucros</p>
-                    </a>
-                </div>
-                <div class="col s6 m2">
-                    <a href=" ">
-                        <img src="../assets/resources/img/menu/locacao.png">
-                        <p>Relatório de Locações</p>
-                    </a>
-                </div>
-                <div class="col s6 m2">
-                    <a href=" ">
-                        <img src="../assets/resources/img/menu/enviar-oficina.png">
-                        <p>Relatório de Reparos</p>
                     </a>
                 </div>
             </div>
