--- a/pages/atualizar-dados-veiculo.html
+++ b/pages/atualizar-dados-veiculo.html
@@ -139,32 +139,32 @@
         <div class="modal-content">
             <h4>Serviços</h4>
             <div class="row ">
-                <div class="col s6 m6 l2">
+                <div class="col s6 m2 ">
                     <a href="#modal-gerenciar-locacao" class="modal-trigger">
                         <img src="../assets/resources/img/menu/locacao.png">
                         <p>Gerenciar Locações</p>
                     </a>
                 </div>
-                <div class="col s6 m6 l2">
+                <div class="col s6 m2 ">
                     <a href="#modal-gerenciar-cliente" class="modal-trigger">
                         <img src="../assets/resources/img/menu/cliente.png">
                         <p>Gerenciar Clientes</p>
                     </a>
                 </div>
-                <div class="col s6 m6 l2">
+                <div class="col s6 m2">
                     <a href="#modal-gerenciar-usuario" class="modal-trigger">
                         <img src="../assets/resources/img/menu/usuario.png">
                         <p>Gerenciar Usuários</p>
                     </a>
                 </div>
-                <div class="col s6 m6 l2">
+                <div class="col s6 m2">
                     <a href="#modal-gerenciar-frota" class="modal-trigger">
                         <img src="../assets/resources/img/menu/veiculo.png">
                         <p>Gerenciar Frota</p>
                     </a>
                 </div>
-                <div class="col s6 m6 l2">
-                    <a href="#modal-gerenciar-relatorio" class="modal-trigger">
+                <div class="col s6 m2">
+                    <a href="relatorios.html" class="modal-trigger">
                         <img src="../assets/resources/img/menu/relatorio.png">
                         <p>Relátorios</p>
                     </a>
@@ -226,7 +226,7 @@
         <div class="modal-content">
             <h4>Gerenciar Usuário</h4>
             <div class="row">
-                <div class="col s6 m2">
+                <div class="col s6 m2 ">
                     <a href="cadastro-usuario.html">
                         <img src="../assets/resources/img/menu/adicionar.png">
                         <p>Adicionar Usuário</p>
@@ -279,37 +279,6 @@
             <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Fechar</a>
         </div>
     </div>
-
-
-    <div id="modal-gerenciar-relatorio" class="modal">
-        <div class="modal-content">
-            <h4>Gerenciar Clientes</h4>
-            <div class="row">
-                <div class="col s6 m2">
-                    <a href=" ">
-                        <img src="../assets/resources/img/menu/relatorio-lucros.png">
-                        <p>Relatório de Lucros</p>
-                    </a>
-                </div>
-                <div class="col s6 m2">
-                    <a href=" ">
-                        <img src="../assets/resources/img/menu/locacao.png">
-                        <p>Relatório de Locações</p>
-                    </a>
-                </div>
-                <div class="col s6 m2">
-                    <a href=" ">
-                        <img src="../assets/resources/img/menu/enviar-oficina.png">
-                        <p>Relatório de Reparos</p>
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div class="modal-footer">
-            <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Fechar</a>
-        </div>
-    </div>
-
     <section>
         <footer class="section cor-principal">
             <p>RentACar - Locações de automóveis - 2019</p>
