--- a/pages/veiculos-disponiveis-pag2.html
+++ b/pages/veiculos-disponiveis-pag2.html
@@ -189,7 +189,7 @@
                     </a>
                 </div>
                 <div class="col s6 m2">
-                    <a href="#modal-gerenciar-relatorio" class="modal-trigger">
+                    <a href="relatorios.html" class="modal-trigger">
                         <img src="../assets/resources/img/menu/relatorio.png">
                         <p>Relátorios</p>
                     </a>
@@ -287,13 +287,13 @@
                     </a>
                 </div>
                 <div class="col s6 m2">
-                    <a href=" ">
+                    <a href="enviar-veiculo-oficina.html">
                         <img src="../assets/resources/img/menu/enviar-oficina.png">
                         <p>Enviar Veículo para oficina</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
-                    <a href=" ">
+                    <a href="retornar-veiculo-oficina.html">
                         <img src="../assets/resources/img/menu/retornar-oficina.png">
                         <p>Retornar Veículo da Oficina</p>
                     </a>
@@ -304,37 +304,6 @@
             <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Fechar</a>
         </div>
     </div>
-
-
-    <div id="modal-gerenciar-relatorio" class="modal">
-        <div class="modal-content">
-            <h4>Gerenciar Clientes</h4>
-            <div class="row ">
-                <div class="col s6 m2">
-                    <a href=" ">
-                        <img src="../assets/resources/img/menu/relatorio-lucros.png">
-                        <p>Relatório de Lucros</p>
-                    </a>
-                </div>
-                <div class="col s6 m2">
-                    <a href="enviar-veiculo-oficina.html">
-                        <img src="../assets/resources/img/menu/locacao.png">
-                        <p>Relatório de Locações</p>
-                    </a>
-                </div>
-                <div class="col s6 m2">
-                    <a href="retornar-veiculo-oficina.html">
-                        <img src="../assets/resources/img/menu/enviar-oficina.png">
-                        <p>Relatório de Reparos</p>
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div class="modal-footer">
-            <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Fechar</a>
-        </div>
-    </div>
-
     <section>
         <ul class="pagination">
             <li class="waves-effect"><a href="veiculos-disponiveis.html"><i class="material-icons">chevron_left</i></a></li>
