adicionado fonte para títulos

--- a/pages/cadastro-usuario.html
+++ b/pages/cadastro-usuario.html
@@ -56,10 +56,10 @@
     <main>
         <section>
             <div class="container">
-                <h1>Cadastro de Usuário</h1>
+                <h1 class="font-edgeracer">Cadastro de Usuário</h1>
 
                 <form action="">
-                    <h3>Dados pessoais</h3>
+                    <h4>Dados pessoais</h4>
                     <div class="row">
                         <div class="input-field col s12 m12 l6">
                             <i class="material-icons prefix">person</i>
@@ -95,7 +95,7 @@
                         </div>
                     </div>
 
-                    <h3>Endereço</h3>
+                    <h4>Endereço</h4>
                     <div class="row">
                         <div class="input-field col s12 m12 l6">
                             <i class="material-icons prefix">location_on</i>
@@ -109,7 +109,7 @@
                         </div>
                     </div>
 
-                    <h3>Crie sua senha</h3>
+                    <h4>Crie sua senha</h4>
                     <div class="row">
                         <div class="input-field col s12 m12 l6">
                             <i class="material-icons prefix">lock</i>
