--- a/pages/enviar-veiculo-oficina.html
+++ b/pages/enviar-veiculo-oficina.html
@@ -56,7 +56,7 @@
     <main>
         <section>
             <div class="container">
-                <h1>Enviar veículo para oficina</h1>
+                <h1 class="font-edgeracer">Enviar veículo para oficina</h1>
                 <form id="form-enviar-oficina" action="">
                     <div class="row">
                         <div class="input-field col s12 m7">
