--- a/pages/nova-locacao.html
+++ b/pages/nova-locacao.html
@@ -56,7 +56,7 @@
     <main>
         <section>
             <div class="container">
-                <h1>Novo pedido de Locação</h1>
+                <h1 class="font-edgeracer">Novo pedido de Locação</h1>
                 <form id="form-nova-locacao" action="">
                     <div class="row">
                         <div class="input-field col s12 m7">
