--- a/pages/relatorios.html
+++ b/pages/relatorios.html
@@ -56,7 +56,7 @@
     <main>
         <section>
             <div class="container">
-                <h1><i class="material-icons prefix medium">assignment</i>Relatórios</h1>
+                <h1 class="font-edgeracer">Relatórios</h1>
                 <div class="row">
                     <div class="input-field col s12">
                         <i class="material-icons prefix">filter_list</i>
@@ -76,7 +76,6 @@
                     </div>
                 </div>
                 <div id="div-filtro-data" class="row ocultar-conteudo">
-                    <h4>Selecione o Intervelo de Data para Pesquisa</h4>
                     <div class="input-field col s12 m6">
                         <i class="material-icons prefix">date_range</i>
                         <input type="text" class="datepicker" placeholder="Clique aqui para selecionar a data de ínicio">
@@ -102,7 +101,7 @@
                     </div>
                 </div>
                 <div id="div-relatorio-locacao" class="row">
-                    <h4>Historico de locações</h4>
+                    <h4>Histórico de locações</h4>
                     <div class="col s12">
                         <table>
                             <tr>
@@ -176,7 +175,7 @@
                 </div>
 
                 <div id="div-relatorio-manutencao" class="row ocultar-conteudo">
-                    <h4>Historico de Manutenções</h4>
+                    <h4>Histórico de Manutenções</h4>
                     <div class="col s12">
                         <table>
                             <tr>
