--- a/pages/veiculos-disponiveis-pag2.html
+++ b/pages/veiculos-disponiveis-pag2.html
@@ -81,6 +81,7 @@
                                     <i class="material-icons left"></i>Pesquisar</button>
 
                         </form>
+                        <h4 class="font-edgeracer">Veículos disponíveis</h4>
                     </div>
                 </div>
             </div>
