--- a/pages/atualizar-dados-usuario.html
+++ b/pages/atualizar-dados-usuario.html
@@ -56,7 +56,7 @@
     <main>
         <section>
             <div class="container">
-                <h1>Atualizar Dados do Usuário</h1>
+                <h1 class="font-edgeracer">Atualizar Dados do Usuário</h1>
                 <form action="">
                     <div class="row">
                         <div class="input-field col s12 m6">
