--- a/pages/atualizar-dados-veiculo.html
+++ b/pages/atualizar-dados-veiculo.html
@@ -56,7 +56,7 @@
     <main>
         <section>
             <div class="container">
-                <h1>Atualizar dados do Veículo</h1>
+                <h1 class="font-edgeracer">Atualizar dados do Veículo</h1>
                 <form action="">
                     <div class="row">
                         <div class="input-field col s12 m6">
@@ -109,7 +109,7 @@
                             </div>
                             <div class="row">
                                 <div id="div-imagens-veiculo" class="input-field col s12">
-                                    <h3>Adicionar ou Alterar Imagem</h3>
+                                    <h4>Adicionar ou Alterar Imagem</h4>
                                 </div>
                             </div>
                             <div class="row">
