--- a/pages/cadastro-cliente.html
+++ b/pages/cadastro-cliente.html
@@ -56,7 +56,7 @@
     <main>
         <section>
             <div class="container">
-                <h1>Cadastro de Cliente</h1>
+                <h1 class="font-edgeracer">Cadastro de Cliente</h1>
                 <form action="">
                     <div class="row">
                         <div class="input-field col s12 m12 l6">
