--- a/pages/devolucao.html
+++ b/pages/devolucao.html
@@ -56,7 +56,7 @@
     <main>
         <section>
             <div class="container">
-                <h1>Devolução de Veículo</h1>
+                <h1 class="font-edgeracer">Devolução de Veículo</h1>
                 <form action="">
                     <div class="row">
                         <div class="input-field col s12 m8">
