--- a/pages/retornar-veiculo-oficina.html
+++ b/pages/retornar-veiculo-oficina.html
@@ -58,7 +58,6 @@
             <div class="container">
                 <div id="div-categoria" class="row">
                     <div class="col s12">
-                        <h3>Veículo(s) na Oficina</h3>
                         <form id="form-categoria" class="card-panel" action="">
                             <h5>Filtrar por Categoria:</h5>
                             <label>
@@ -79,9 +78,10 @@
                                     </label>
 
                             <button id="button-pesquisa-filtro" class="waves-effect waves-light btn-small  disabled" type="submit">
-                                            <i class="material-icons left"></i>Pesquisar</button>
-
+                                            <i class="material-icons left"></i>Pesquisar
+                            </button>
                         </form>
+                        <h4 class="font-edgeracer">Veículos na Oficina</h4>
                     </div>
                 </div>
 
