--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
                     <div class="row">
                         <div class="col s12">
                             <button id="button-login" class="waves-effect waves-light btn" type="button">
-                            <i class="material-icons left">check_circle</i>Entrar</button>
+                            <i class="material-icons left">check_circle</i>Entrar
+                        </button>
                         </div>
                     </div>
                 </form>
