--- a/pages/atualizar-dados-cliente.html
+++ b/pages/atualizar-dados-cliente.html
@@ -9,7 +9,7 @@
     <link type="text/css" rel="stylesheet" href="../assets/libraries/materialize-v1.0.0/css/materialize.min.css">
     <link type="text/css" rel="stylesheet" href="../assets/resources/styles/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <title>Alterar dados do Cliente</title>
+    <title>Atualizar dados do Cliente</title>
 </head>
 
 <body>
@@ -112,11 +112,13 @@
                     <div class="row">
                         <div class="col s12 m12 l6">
                             <button class="waves-effect waves-light btn button-confirmar" type="submit">
-                                    <i class="material-icons left">check_circle</i>Confirmar mudanças</button>
+                                <i class="material-icons left">check_circle</i>Confirmar mudanças
+                            </button>
                         </div>
                         <div class="col s12 m12 l6">
                             <button class="waves-effect waves-light btn button-cancelar" type="submit">
-                                    <i class="material-icons left">cancel</i>Cancelar</button>
+                                <i class="material-icons left">cancel</i>Cancelar
+                            </button>
                         </div>
                     </div>
                 </form>
