--- a/pages/cadastro-usuario.html
+++ b/pages/cadastro-usuario.html
@@ -126,11 +126,13 @@
                     <div class="row">
                         <div class="col s12 m12 l6">
                             <button class="waves-effect waves-light btn button-confirmar" type="submit">
-                                <i class="material-icons left">check_circle</i>Cadastrar</button>
+                                <i class="material-icons left">check_circle</i>Cadastrar
+                            </button>
                         </div>
                         <div class="col s12 m12 l6">
                             <button class="waves-effect waves-light btn button-cancelar" type="submit">
-                                <i class="material-icons left">cancel</i>Cancelar</button>
+                                <i class="material-icons left">cancel</i>Cancelar
+                            </button>
                         </div>
                     </div>
                 </form>
