--- a/pages/relatorios.html
+++ b/pages/relatorios.html
@@ -90,7 +90,8 @@
                 <div class="row">
                     <div class="col s12">
                         <button id="button-pesquisar-relatorio" class="waves-effect waves-light btn button-pesquisar" type="submit">
-                                <i class="material-icons left">search</i>Pesquisar</button>
+                            <i class="material-icons left">search</i>Pesquisar
+                        </button>
                     </div>
                 </div>
                 <div id="div-informacao-veiculo" class="row">
