--- a/pages/retornar-veiculo-oficina.html
+++ b/pages/retornar-veiculo-oficina.html
@@ -61,24 +61,24 @@
                         <form id="form-categoria" class="card-panel" action="">
                             <h5>Filtrar por Categoria:</h5>
                             <label>
-                                        <input type="checkbox" class="filled-in" name="categoria" value="hatch">
-                                        <span>Hatch</span>
-                                    </label>
+                                <input type="checkbox" class="filled-in" name="categoria" value="hatch">
+                                <span>Hatch</span>
+                            </label>
                             <label>
-                                        <input type="checkbox" class="filled-in" name="categoria" value="sedan">
-                                        <span>Sedãn</span>
-                                    </label>
+                                <input type="checkbox" class="filled-in" name="categoria" value="sedan">
+                                <span>Sedãn</span>
+                            </label>
                             <label>
-                                        <input type="checkbox" class="filled-in" name="categoria" value="suv">
-                                        <span>SUV</span>
-                                    </label>
+                                <input type="checkbox" class="filled-in" name="categoria" value="suv">
+                                <span>SUV</span>
+                            </label>
                             <label>
-                                        <input type="checkbox" class="filled-in" name="categoria" value="pick-ups"> 
-                                        <span>Pick-Ups</span>
-                                    </label>
+                                <input type="checkbox" class="filled-in" name="categoria" value="pick-ups"> 
+                                <span>Pick-Ups</span>
+                            </label>
 
                             <button id="button-pesquisa-filtro" class="waves-effect waves-light btn-small  disabled" type="submit">
-                                            <i class="material-icons left"></i>Pesquisar
+                                <i class="material-icons left"></i>Pesquisar
                             </button>
                         </form>
                         <h4 class="font-edgeracer">Veículos na Oficina</h4>
@@ -104,7 +104,8 @@
                                 </div>
 
                                 <button class="waves-effect waves-light btn button-confirmar" type="submit">
-                                    <i class="material-icons left">build</i>Finalizar reparo</button>
+                                    <i class="material-icons left">build</i>Finalizar reparo
+                                </button>
                             </div>
                         </div>
                     </div>
@@ -127,7 +128,8 @@
                                 </div>
 
                                 <button class="waves-effect waves-light btn button-confirmar" type="submit">
-                                        <i class="material-icons left">build</i>Finalizar reparo</button>
+                                    <i class="material-icons left">build</i>Finalizar reparo
+                                </button>
                             </div>
                         </div>
                     </div>
