--- a/pages/veiculos-disponiveis-pag2.html
+++ b/pages/veiculos-disponiveis-pag2.html
@@ -78,8 +78,8 @@
                             </label>
 
                             <button id="button-pesquisa-filtro" class="waves-effect waves-light btn-small  disabled" type="submit">
-                                    <i class="material-icons left"></i>Pesquisar</button>
-
+                                <i class="material-icons left"></i>Pesquisar
+                            </button>
                         </form>
                         <h4 class="font-edgeracer">Veículos disponíveis</h4>
                     </div>
