--- a/pages/atualizar-dados-usuario.html
+++ b/pages/atualizar-dados-usuario.html
@@ -66,7 +66,8 @@
                         </div>
                         <div class="col s12 m6">
                             <button class="waves-effect waves-light btn button-pesquisar" type="submit">
-                            <i class="material-icons left">search</i>Pesquisar</button>
+                            <i class="material-icons left">search</i>Pesquisar
+                        </button>
                         </div>
                     </div>
                     <div id="div-dados-pessoa">
@@ -113,11 +114,13 @@
                         <div class="row">
                             <div class="col s12 m12 l6">
                                 <button class="waves-effect waves-light btn button-confirmar" type="submit">
-                                <i class="material-icons left">check_circle</i>Salvar Alterações</button>
+                                <i class="material-icons left">check_circle</i>Confirmar Mudanças
+                            </button>
                             </div>
                             <div class="col s12 m12 l6">
                                 <button class="waves-effect waves-light btn button-cancelar" type="submit">
-                                <i class="material-icons left">cancel</i>Cancelar</button>
+                                <i class="material-icons left">cancel</i>Cancelar
+                            </button>
                             </div>
                         </div>
 
