--- a/pages/cadastro-veiculo.html
+++ b/pages/cadastro-veiculo.html
@@ -115,11 +115,13 @@
                             <div class="row">
                                 <div class="col s12 m12 l6">
                                     <button class="waves-effect waves-light btn button-confirmar" type="submit">
-                                    <i class="material-icons left">check_circle</i>Cadastrar Veículo</button>
+                                    <i class="material-icons left">check_circle</i>Cadastrar Veículo
+                                </button>
                                 </div>
                                 <div class="col s12 m12 l6">
                                     <button class="waves-effect waves-light btn button-cancelar" type="submit">
-                                    <i class="material-icons left">cancel</i>Cancelar</button>
+                                    <i class="material-icons left">cancel</i>Cancelar
+                                </button>
                                 </div>
                             </div>
                         </div>
