--- a/pages/devolucao.html
+++ b/pages/devolucao.html
@@ -66,7 +66,8 @@
                         </div>
                         <div class="col s12 m4">
                             <button class="waves-effect waves-light btn button-pesquisar" type="submit">
-                             <i class="material-icons left">search</i>Pesquisar</button>
+                             <i class="material-icons left">search</i>Pesquisar
+                            </button>
                         </div>
                     </div>
                     <div class="row">
@@ -88,7 +89,8 @@
                     </div>
                     <div class="row">
                         <button class="waves-effect waves-light btn right button-confirmar" type="submit">
-                            <i class="material-icons left">check</i>confirmar Devolução</button>
+                            <i class="material-icons left">check</i>confirmar Devolução
+                        </button>
                     </div>
                 </form>
             </div>
