--- a/pages/enviar-veiculo-oficina.html
+++ b/pages/enviar-veiculo-oficina.html
@@ -66,7 +66,8 @@
                         </div>
                         <div class="col s12 m5">
                             <button id="button-pesquisar-veiculo" class="waves-effect waves-light btn button-pesquisar" type="submit">
-                            <i class="material-icons left">search</i>Pesquisar</button>
+                            <i class="material-icons left">search</i>Pesquisar
+                        </button>
                         </div>
                     </div>
                     <div class="row">
@@ -89,7 +90,8 @@
                     <div class="row">
                         <div class="col s12">
                             <button class="waves-effect waves-light btn button-confirmar" type="submit">
-                                <i class="material-icons left">build</i>Enviar para Oficina</button>
+                                <i class="material-icons left">build</i>Enviar para Oficina
+                            </button>
                         </div>
                     </div>
                 </form>
